// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Search /> should render 1`] = `
<div>
  <label
    class="sc-9b1edd7b-0 erCyth"
    for="convention-search"
  >
    Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
  </label>
  <div
    class="sc-46a9700d-0 eEbjpm sc-7029e335-0 btjXXy"
  >
    <input
      class="sc-46a9700d-1 dZpFqX"
      id="convention-search"
      name="q"
      placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
      type="search"
      value=""
    />
  </div>
  <p
    class="sc-7029e335-1 eQVARQ"
  >
    Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
    <span
      class="sc-7029e335-2 emEtHs"
    >
      Consultez
       
      <button
        class="sc-b0ebfae6-0 iBhawp sc-7029e335-3 enfoOw"
        type="button"
      >
        notre aide
      </button>
      .
    </span>
  </p>
</div>
`;

exports[`<Search /> should show no results when no result 1`] = `
<div>
  <label
    class="sc-9b1edd7b-0 erCyth"
    for="convention-search"
  >
    Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
  </label>
  <div
    class="sc-46a9700d-0 eEbjpm sc-7029e335-0 btjXXy"
  >
    <input
      class="sc-46a9700d-1 dZpFqX"
      id="convention-search"
      name="q"
      placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
      type="search"
      value="9999"
    />
  </div>
  <div
    class="sc-7029e335-4 iyEKsr"
  >
    <p
      class="sc-a4406a0f-1 rjoOw"
    >
      Aucun résultat n’a été trouvé.
    </p>
  </div>
  <p
    class="sc-7029e335-1 eQVARQ"
  >
    Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
    <span
      class="sc-7029e335-2 emEtHs"
    >
      Consultez
       
      <button
        class="sc-b0ebfae6-0 iBhawp sc-7029e335-3 enfoOw"
        type="button"
      >
        notre aide
      </button>
      .
    </span>
  </p>
</div>
`;

exports[`<Search /> should show spinner when loading 1`] = `
<div>
  <label
    class="sc-9b1edd7b-0 erCyth"
    for="convention-search"
  >
    Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
  </label>
  <div
    class="sc-46a9700d-0 eEbjpm sc-7029e335-0 btjXXy"
  >
    <input
      class="sc-46a9700d-1 dZpFqX"
      id="convention-search"
      name="q"
      placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
      type="search"
      value="8888"
    />
  </div>
  <div
    class="sc-7029e335-4 iyEKsr"
  >
    <p
      class="sc-a4406a0f-1 rjoOw"
    >
      <svg
        aria-labelledby="title desc"
        class="__react-svg-spinner_circle"
        height="1em"
        role="img"
        style="animation-duration: 750ms;"
        viewBox="0 0 32 32"
        width="1em"
      >
        <title
          id="title"
        >
          Circle loading spinner
        </title>
        <desc
          id="desc"
        >
          Image of a partial circle indicating "loading."
        </desc>
        <style>
          
      .__react-svg-spinner_circle{
          transition-property: transform;
          animation-name: __react-svg-spinner_infinite-spin;
          animation-iteration-count: infinite;
          animation-timing-function: linear;
      }
      @keyframes __react-svg-spinner_infinite-spin {
          from {transform: rotate(0deg)}
          to {transform: rotate(360deg)}
      }
    
        </style>
        <circle
          cx="16"
          cy="16"
          fill="none"
          r="12"
          role="presentation"
          stroke="rgba(0,0,0,0.4)"
          stroke-dasharray="43.982297150257104"
          stroke-linecap="round"
          stroke-width="4"
        />
      </svg>
       Recherche des convention collectives...
    </p>
  </div>
  <p
    class="sc-7029e335-1 eQVARQ"
  >
    Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
    <span
      class="sc-7029e335-2 emEtHs"
    >
      Consultez
       
      <button
        class="sc-b0ebfae6-0 iBhawp sc-7029e335-3 enfoOw"
        type="button"
      >
        notre aide
      </button>
      .
    </span>
  </p>
</div>
`;

exports[`<Search /> when input is IDCC, should search conventions 1`] = `
<div>
  <label
    class="sc-9b1edd7b-0 erCyth"
    for="convention-search"
  >
    Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
  </label>
  <div
    class="sc-46a9700d-0 eEbjpm sc-7029e335-0 btjXXy"
  >
    <input
      class="sc-46a9700d-1 dZpFqX"
      id="convention-search"
      name="q"
      placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
      type="search"
      value="1234"
    />
  </div>
  <div
    class="sc-7029e335-4 iyEKsr"
  >
    <div
      class="sc-13323d30-0 sc-f1b633f2-0 gtmVnh hVjMsy"
    >
      <h3
        class="sc-a53a0f9a-0 bIsTsN"
      >
        CONVENTIONS COLLECTIVES (2
         
        résultats)
      </h3>
      <ul
        class="sc-78dd7a00-0 fVqAjV"
      >
        <li
          class="sc-f1b633f2-1 fOEIjw"
        >
          <a
            class="sc-b0ba5588-0 ehbXdn"
            href="/convention-collective/275-small-titre"
          >
            small titre
             
            <span
              class="sc-b0ba5588-1 gLArfB"
            >
              (IDCC 
              0275
              )
            </span>
          </a>
        </li>
        <li
          class="sc-f1b633f2-1 fOEIjw"
        >
          <a
            class="sc-b0ba5588-0 KiIXl"
            href="/convention-collective/276-smaller-convention-2"
          >
            smaller convention 2
             
            <span
              class="sc-b0ba5588-1 gLArfB"
            >
              (IDCC 
              0276
              )
            </span>
          </a>
        </li>
      </ul>
    </div>
  </div>
  <p
    class="sc-7029e335-1 eQVARQ"
  >
    Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
    <span
      class="sc-7029e335-2 emEtHs"
    >
      Consultez
       
      <button
        class="sc-b0ebfae6-0 iBhawp sc-7029e335-3 enfoOw"
        type="button"
      >
        notre aide
      </button>
      .
    </span>
  </p>
</div>
`;

exports[`<Search /> when input is a valid IDCC, should show only the perfect match 1`] = `
<div>
  <label
    class="sc-9b1edd7b-0 erCyth"
    for="convention-search"
  >
    Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
  </label>
  <div
    class="sc-46a9700d-0 eEbjpm sc-7029e335-0 btjXXy"
  >
    <input
      class="sc-46a9700d-1 dZpFqX"
      id="convention-search"
      name="q"
      placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
      type="search"
      value="4567"
    />
  </div>
  <div
    class="sc-7029e335-4 iyEKsr"
  >
    <div
      class="sc-13323d30-0 sc-f1b633f2-0 gtmVnh hVjMsy"
    >
      <h3
        class="sc-a53a0f9a-0 bIsTsN"
      >
        CONVENTIONS COLLECTIVES (1
         
        résultat)
      </h3>
      <ul
        class="sc-78dd7a00-0 fVqAjV"
      >
        <li
          class="sc-f1b633f2-1 fOEIjw"
        >
          <a
            class="sc-b0ba5588-0 ehbXdn"
            href="/convention-collective/4567-smaller-convention-2"
          >
            smaller convention 2
             
            <span
              class="sc-b0ba5588-1 gLArfB"
            >
              (IDCC 
              4567
              )
            </span>
          </a>
        </li>
      </ul>
    </div>
  </div>
  <p
    class="sc-7029e335-1 eQVARQ"
  >
    Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
    <span
      class="sc-7029e335-2 emEtHs"
    >
      Consultez
       
      <button
        class="sc-b0ebfae6-0 iBhawp sc-7029e335-3 enfoOw"
        type="button"
      >
        notre aide
      </button>
      .
    </span>
  </p>
</div>
`;

exports[`<Search /> when searching by text, should use enterprise API 1`] = `
<div>
  <label
    class="sc-9b1edd7b-0 erCyth"
    for="convention-search"
  >
    Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
  </label>
  <div
    class="sc-46a9700d-0 eEbjpm sc-7029e335-0 btjXXy"
  >
    <input
      class="sc-46a9700d-1 dZpFqX"
      id="convention-search"
      name="q"
      placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
      type="search"
      value="hello"
    />
  </div>
  <div
    class="sc-7029e335-4 iyEKsr"
  >
    <p
      class="sc-a4406a0f-1 rjoOw"
    >
      Le service de recherche est indisponible.
    </p>
  </div>
  <p
    class="sc-7029e335-1 eQVARQ"
  >
    Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
    <span
      class="sc-7029e335-2 emEtHs"
    >
      Consultez
       
      <button
        class="sc-b0ebfae6-0 iBhawp sc-7029e335-3 enfoOw"
        type="button"
      >
        notre aide
      </button>
      .
    </span>
  </p>
</div>
`;
